# opt_prop_suite

./: .gitignore  021622_notes  670ramanExample.ipynb  Compute_Spectra_Workflow.ipynb  Full_version_plan.org  IR_workflow.ipynb  Optical_applications_materials_query.ipynb  POSCAR  README.org  convergence_graph.py  crystal_plot.ipynb  environment.yml  frontend.py  getOutputs.py  hello.txt  html_hack.txt  inputs.csv  parallel_submit.ipynb  pyproject.toml  scf.in  spectra.py  spectra_test.py  test.txt  widgets_test.ipynb
Deliverables/20220230-OPS_workflow_and_simulation_details/: OPS_Workflow_and_Results.org  OPS_Workflow_and_Results.tex
dispersion_test/: dispersion_workflow.ipynb
middleware/: invoke
othertest/: POSCAR
output_test/: relax_sim_outputs.ipynb
simtool/: 670raman.ipynb  IRspec.ipynb  backend.py  relax_sim.ipynb
simtool/pseudo/archive/: SSSP_1.0_PBE_precision.json
